--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,12 +5,12 @@
       <div class="col-md-12">
         <div class="footer-manu">
           <ul>
-            <li><a href="{{ site.baseurl }}/">Home</a></li>
-            <li><a href="{{ site.baseurl }}/about_me">About Me</a></li>
-            <li><a href="{{ site.baseurl }}/links">Links</a></li>
-            <li><a href="{{ site.baseurl }}/bike_maintenance">Maintenance</a></li>
-            <li><a href="{{ site.baseurl }}/services">Services</a></li>
-            <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
+            <li><a href="">Home</a></li>
+            <li><a href="about_me">About Me</a></li>
+            <li><a href="links">Links</a></li>
+            <li><a href="bike_maintenance">Maintenance</a></li>
+            <li><a href="services">Services</a></li>
+            <li><a href="contact">Contact</a></li>
           </ul>
         </div>
         <p>Copyright &copy; Design &amp; Developed by <a href="http://www.themefisher.com">Themefisher</a>. All rights reserved.</p>
