--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,18 +15,18 @@
             <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="index.html">
-              <img src="img/logo.png" alt="Logo">
+              <img src="{{ site.baseurl }}/img/logo.png" alt="Logo">
             </a>
           </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="">Home</a></li>
-                <li><a href="about_me">About Me</a></li>
-                <li><a href="links">Links</a></li>
-                <li><a href="maintenance">Maintenance</a></li>
-                <li><a href="services">Services</a></li>
-                <li><a href="contact">Contact</a></li>
+                <li><a href="{{ site.baseurl }}/">Home</a></li>
+                <li><a href="{{ site.baseurl }}/about_me">About Me</a></li>
+                <li><a href="{{ site.baseurl }}/links">Links</a></li>
+                <li><a href="{{ site.baseurl }}/maintenance">Maintenance</a></li>
+                <li><a href="{{ site.baseurl }}/services">Services</a></li>
+                <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
