--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
             <li><a href="{{ site.baseurl }}/">Home</a></li>
             <li><a href="{{ site.baseurl }}/about_me">About Me</a></li>
             <li><a href="{{ site.baseurl }}/links">Links</a></li>
-            <li><a href="{{ site.baseurl }}/bike_maintenance">Maintenance</a></li>
+            <li><a href="{{ site.baseurl }}/maintenance">Maintenance</a></li>
             <li><a href="{{ site.baseurl }}/services">Services</a></li>
             <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
           </ul>
